data/derived/comb/progs/unify/prog5809.ml.out
Characters 206-207:
  let (carry, res) = List.fold_left f base args in
                                    ^
Error: This expression has type 'a * int list -> int list -> int list
       but an expression was expected of type
         'a * int list -> int list -> 'a * int list
       Type int list is not compatible with type 'a * int list 
